--- a/Practical_Lab_Exam_1_.ipynb
+++ b/Practical_Lab_Exam_1_.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Practical Lab Exam 1..ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyP8Z/AJ0jS0Ujf8sqJldJjs",
+      "authorship_tag": "ABX9TyMED6+d4tkDlHKG5cpHIfnn",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -43,7 +43,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "y-TOkU_8y5nn",
-        "outputId": "58911afd-7571-4b42-8ed3-be2d409e9998"
+        "outputId": "4da9f670-680d-44ad-dbe9-c8ce5086bd37"
       },
       "source": [
         "import numpy as np\n",
@@ -56,28 +56,28 @@
         "b = np.add(D,D)\n",
         "c = 2*C\n",
         "\n",
-        "print(\"A.\")\n",
+        "print(\"A. AB\")\n",
         "print(a)\n",
-        "print(\"\\nB.\")\n",
+        "print(\"\\nB. D+D\")\n",
         "print(b)\n",
-        "print(\"\\nC.\")\n",
+        "print(\"\\nC. 2*C\")\n",
         "print(c)"
       ],
-      "execution_count": 2,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "A.\n",
+            "A. AB\n",
             "[[22 28]\n",
             " [49 64]]\n",
             "\n",
-            "B.\n",
+            "B. D+D\n",
             "[[2 4]\n",
             " [6 8]]\n",
             "\n",
-            "C.\n",
+            "C. 2*C\n",
             "[[ 2  4  6]\n",
             " [ 8 10 12]\n",
             " [14 16 18]]\n"
