--- a/Prelim_Exam.ipynb
+++ b/Prelim_Exam.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Prelim Exam.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyO/89irPnkmM2a9dPoGc/UF",
+      "authorship_tag": "ABX9TyOd/Yf5VW5hIEupNfi0WM/K",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -87,6 +87,8 @@
         "import numpy as np \n",
         "A = np.array([1, 1, 1, 1])\n",
         "C = np.diag(A)\n",
+        "\n",
+        "#To double the value of array C\n",
         "print(C*2)"
       ],
       "execution_count": 17,
@@ -125,6 +127,8 @@
         "import numpy as np\n",
         "A = np.array([2, 7, 4])\n",
         "B = np.array([3, 9, 8])\n",
+        "\n",
+        "#To compute the cross of arrays A and B\n",
         "cross = np.cross(A,B)\n",
         "print(cross)"
       ],
