--- a/Matrix_Algebra.ipynb
+++ b/Matrix_Algebra.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Matrix Algebra.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMyVz/1QZZz/TTa91PhESfR",
+      "authorship_tag": "ABX9TyNUHAjhaepkx1+o39uM5EJB",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -181,32 +181,36 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "fi3vT9pP-vh3",
-        "outputId": "9ae2b0c3-4474-4e0e-8b3c-3b5cf3c88c2f"
+        "outputId": "78065458-02fd-4002-e6ac-d6d3c6a7ca9d"
       },
       "source": [
         "##Python Program to Inverse a 4x4 Matrix A=([6,1,1,3],[4,-2,5,1],[2,8,7,6],[3,1,9,7])\n",
         "A=np.array([[6,1,1,3],[4,-2,5,1],[2,8,7,6],[3,1,9,7]]) #To create a 4x4 matrix named as Matrix A. \n",
         "invA=(np.linalg.inv(A)) #To inverse Matrix A\n",
+        "print('The inverse of the 4x4 matrix named as Matrix A is')\n",
         "print(invA)\n",
         "print()\n",
-        "B=np.transpose(invA) #To transpose inversed Matrix A\n",
+        "B=np.transpose(A) #To transpose Matrix A\n",
+        "print('The transpose of the 4x4 matrix named as Matrix A is')\n",
         "print(B)"
       ],
-      "execution_count": 23,
+      "execution_count": 30,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
+            "The inverse of the 4x4 matrix named as Matrix A is\n",
             "[[ 0.13368984  0.10695187  0.02139037 -0.09090909]\n",
             " [-0.00229183  0.02673797  0.14820474 -0.12987013]\n",
             " [-0.12987013  0.18181818  0.06493506 -0.02597403]\n",
             " [ 0.11000764 -0.28342246 -0.11382735  0.23376623]]\n",
             "\n",
-            "[[ 0.13368984 -0.00229183 -0.12987013  0.11000764]\n",
-            " [ 0.10695187  0.02673797  0.18181818 -0.28342246]\n",
-            " [ 0.02139037  0.14820474  0.06493506 -0.11382735]\n",
-            " [-0.09090909 -0.12987013 -0.02597403  0.23376623]]\n"
+            "The transpose of the 4x4 matrix named as Matrix A is\n",
+            "[[ 6  4  2  3]\n",
+            " [ 1 -2  8  1]\n",
+            " [ 1  5  7  9]\n",
+            " [ 3  1  6  7]]\n"
           ]
         }
       ]
