--- a/Determinant_of_Matrix.ipynb
+++ b/Determinant_of_Matrix.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Determinant of Matrix.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNBzdrvHE5PIAKWDalpV87j",
+      "authorship_tag": "ABX9TyOukqqmA6YhFIk8+UiXf/Fh",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -50,7 +50,7 @@
         "A = np.array([[1,2,-1],[4,6,-2],[-1,3,3]]) #To create a 3x3 matrix named as A\n",
         "print(A)\n",
         "print('\\nDeterminant of A:')\n",
-        "print(round(np.linalg.det(A))) #Display the rounded off Determinant of A"
+        "print(round(np.linalg.det(A))) #Displays the rounded off Determinant of A"
       ],
       "execution_count": 7,
       "outputs": [
