--- a/Linear_Transformation.ipynb
+++ b/Linear_Transformation.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Linear Transformation.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOjRNeD6d6LWYfldMygCsRA",
+      "authorship_tag": "ABX9TyPOYFu8AEOWQMPhcf9Vw7It",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -52,7 +52,7 @@
         "Inv_A = np.linalg.inv(A) #To inverse the inputs of matrix A\n",
         "print(Inv_A) #Prints Inv_A"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -79,7 +79,7 @@
         "B = np.array([[20],[26]]) #Creation of matrix B\n",
         "print(B)"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -104,7 +104,7 @@
         "X = np.linalg.inv(A).dot(B) #To get the dot product of the inverse of A and Matrix B (1st Way)\n",
         "print(X)"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -129,7 +129,7 @@
         "X = np.dot(Inv_A,B) #To get the dot product of the inverse of A and Matrix B (2nd Way)\n",
         "print(X)"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -156,7 +156,7 @@
         "Inv_A = np.linalg.inv(A) #To inverse the inputs of matrix A\n",
         "print(Inv_A) "
       ],
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -183,7 +183,7 @@
         "B = np.array([[350],[500]]) #Creation of matrix B\n",
         "print(B)\n"
       ],
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -205,10 +205,10 @@
         "outputId": "4c058a9d-e0d4-405a-faf5-9186dbf7b6a7"
       },
       "source": [
-        "X = np.dot(Inv_A,B)\n",
+        "X = np.dot(Inv_A,B) #To get the dot product of the inverse of A and Matrix B \n",
         "print(X)"
       ],
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -239,10 +239,10 @@
         "outputId": "5dd0f694-9cb7-4bbe-d588-99f31ee51902"
       },
       "source": [
-        "B = np.dot(A,X)\n",
+        "B = np.dot(A,X) #To check if the answer is correct\n",
         "print(B)"
       ],
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -286,7 +286,7 @@
         "X = np.dot(Inv_A,B) #To get the dot product of the inverse of A and Matrix B \n",
         "print(X)"
       ],
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
