--- a/Final_Exam.ipynb
+++ b/Final_Exam.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Final Exam.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOmCHqdcl37CNn/Meb6WKd5",
+      "authorship_tag": "ABX9TyNhFmN5FovQukNi0qGFzP8l",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -60,7 +60,7 @@
       "source": [
         "Eq1 = np.array([[1,1,1],[1,0,4],[0,0,5]]) #Creates a 3x3 matrix named Eq1\n",
         "Eq2 = np.array([[89],[89],[95]]) #Creates a 1x3 matrix named Eq2\n",
-        "amt = np.linalg.inv(Eq1).dot(Eq2) #Solves for how much each student have\n",
+        "amt = np.linalg.inv(Eq1).dot(Eq2) #Solves for how much each student have using dot product\n",
         "print(amt) #Displays the final answer"
       ]
     },
